deploy/overlays/local/node-zio/components/etl-zib-rest-gateway/etl-zib-rest-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: zio-etl-zib-rest-gateway
  namespace: dh-health
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: etl.zio.local.dh.unimaas.nl
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zio-etl-zib-rest-route
  namespace: dh-health
spec:
  parentRefs:
    - name: zio-etl-zib-rest-gateway
  hostnames:
    - etl.zio.local.dh.unimaas.nl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: zio-etl-zib-rest
          port: 8040
